--- a/src/app/pages/juegos/ahorcado/ahorcado.component.scss
+++ b/src/app/pages/juegos/ahorcado/ahorcado.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
-
 .background-image {
     position: fixed;
     z-index: -1;
@@ -15,6 +13,9 @@
 }
 .container{
     margin-top: 130px;
+    font-family: "Didact Gothic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .contenedor-botones {
     padding-top: 5rem;
@@ -22,11 +23,6 @@
 
 .letras-conteiner{
     margin-top: 35px;
-}
-.concert-one-regular {
-    font-family: "Concert One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
 .palabra-adivinar {
