--- a/src/app/pages/juegos/mayor-menor/mayor-menor.component.scss
+++ b/src/app/pages/juegos/mayor-menor/mayor-menor.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-
 .fondo {
     color: #ecf39e;
     background-color: black;
@@ -20,6 +18,17 @@
 
 .container{
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    font-family: "Didact Gothic", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 20px;
+}
+
+h5,h4{
+    font-family: "Didact Gothic", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 20px;
 }
 
 .card-body {
@@ -73,11 +82,4 @@
 .mensaje {
     margin: 0 auto;
     width: 200px;
-}
-
-.didact-gothic-regular {
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 20px;
 }
