--- a/src/app/pages/juegos/preguntados/preguntados.component.html
+++ b/src/app/pages/juegos/preguntados/preguntados.component.html
@@ -1,11 +1,11 @@
 <section class="container-imagen">
     <div class="container">
-        <div class="container-personaje didact-gothic-regular">
+        <div class="container-personaje">
             <img src={{imagen}} alt="character" height="200">
             <p class="texto">{{personaje}}</p>
             <p class="texto">{{intentos}}/3</p>
         </div>
-        <div class="container-opciones didact-gothic-regular">
+        <div class="container-opciones">
             <p *ngIf="juegoActivado" class="texto">¿De que casa es este personaje?</p>
             <p *ngIf="!juegoActivado" class="texto-juegoTerminado">Se han agotado tus intentos. ¡Puntos acumulados: {{ puntos }}!</p>
             <div *ngIf="juegoActivado" class="opciones">
