--- a/src/app/pages/juegos/preguntados/preguntados.component.scss
+++ b/src/app/pages/juegos/preguntados/preguntados.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-
 .container-imagen{
     position: fixed;
     top: 0;
@@ -12,10 +10,12 @@
 }
 
 .container {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Didact Gothic', sans-serif;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 25px;
+    font-weight: 600;
 }
 
 .container {
@@ -55,13 +55,6 @@ container-personaje {
     color: #712E1E;
     background-color: #E8D1CB;
     border-radius: 40px;
-}
-
-.didact-gothic-regular {
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 25px;
 }
 
 .btn-opcion {
