--- a/src/app/pages/quien-soy/quien-soy.component.html
+++ b/src/app/pages/quien-soy/quien-soy.component.html
@@ -1,6 +1,6 @@
 <section class="container-imagen">
   <div class="container">
-    <div class="container-biografia didact-gothic-regular">
+    <div class="container-biografia">
       <h1>Hola👋, soy <span>Laura Colque</span></h1>
       <p>
         Estudiante de la Tecnicatura Universitaria en Programación en la
