--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 // styles.scss
 // Agrega tus estilos personalizados a continuación
+@font-face {
+  font-family: 'Didact Gothic';
+  src: url('assets/DidactGothic-Regular.ttf') format('truetype');
+  font-style: normal;
+}
